// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionSection /> render accordion is closed renders with the panel hidden 1`] = `
.emotion-7 {
  box-sizing: border-box;
  border-bottom: 1px solid #E0E1E2;
  padding-left: 1rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  cursor: pointer;
}

section:last-child .emotion-7 {
  border-bottom: none;
}

.emotion-7 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-7 .button--minimal:last-of-type +:not(object) {
  margin-left: 0.25rem;
}

.emotion-7 button + .button--secondary,
.emotion-7 button + .button--primary {
  margin-left: 0.5rem;
}

.emotion-5 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  padding: 0;
}

.emotion-0 {
  margin-right: 0.75rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-9 {
  box-sizing: border-box;
  border-bottom: 1px solid #E0E1E2;
  display: none;
  overflow: hidden;
}

section:last-child .emotion-9 {
  border-bottom: none;
  border-top: 1px solid #E0E1E2;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={false}
    className="emotion-7 emotion-8"
    onClick={[Function]}
  >
    <h1
      className="emotion-4 emotion-5 emotion-6"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={false}
        className="emotion-2 emotion-3"
      >
        <i
          className="ar ar-caret emotion-0 emotion-1"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-9 emotion-10"
    display="none"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;

exports[`<AccordionSection /> render accordion is open renders with the panel visible 1`] = `
.emotion-7 {
  box-sizing: border-box;
  border-bottom: 1px solid #E0E1E2;
  padding-left: 1rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  cursor: pointer;
}

section:last-child .emotion-7 {
  border-bottom: none;
}

.emotion-7 .button--minimal:last-of-type {
  margin-right: -0.25rem;
}

.emotion-7 .button--minimal:last-of-type +:not(object) {
  margin-left: 0.25rem;
}

.emotion-7 button + .button--secondary,
.emotion-7 button + .button--primary {
  margin-left: 0.5rem;
}

.emotion-5 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  font-size: inherit;
  padding: 0;
}

.emotion-0 {
  margin-right: 0.75rem;
}

.emotion-9 {
  box-sizing: border-box;
  border-bottom: 1px solid #E0E1E2;
  display: block;
  overflow: hidden;
}

section:last-child .emotion-9 {
  border-bottom: none;
  border-top: 1px solid #E0E1E2;
}

<section>
  <header
    aria-controls="my-accordion-1"
    aria-expanded={true}
    className="emotion-7 emotion-8"
    onClick={[Function]}
  >
    <h1
      className="emotion-4 emotion-5 emotion-6"
      color="text.dark"
      fontSize="size4"
      fontWeight="medium"
    >
      <span
        aria-controls="my-accordion-1"
        aria-expanded={true}
        className="emotion-2 emotion-3"
      >
        <i
          className="ar ar-caret emotion-0 emotion-1"
        />
        My Accordion
      </span>
    </h1>
  </header>
  <div
    className="emotion-9 emotion-10"
    display="block"
    id="my-accordion-1"
    overflow="hidden"
  >
    <p>
      Hello World
    </p>
  </div>
</section>
`;
